<resources>
    <string name="app_name">Терещенко</string>
    <string name="lesson">Lesson</string>
    <string name="time">Time</string>
    <string name="teacher">Teacher</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lesson_ru">Урок</string>
    <string name="place">Зал</string>
    <string name="time_of_the_lesson">Время проведения \nзанятия</string>
    <string name="teacher_ru">Учитель</string>
    <string name="room">Кабинет</string>
</resources>
