<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <include

            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/main_toolbar"
            layout="@layout/toolbar"/>
    <FrameLayout
            android:id="@+id/header"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/lesson"
                style="@style/standard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/time"
                android:layout_gravity="center"
                style="@style/standard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/teacher"
                android:layout_gravity="end"
                style="@style/standard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </FrameLayout>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/lessons_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginBottom="@dimen/standard_margin"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>